--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
     {{>header}}
+    <img class="portrait" src="/img/img.jpeg"/>
 </div>
     {{>footer}}
     </body>
