--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -8,6 +8,7 @@
   <body>
     <div class="main-content">
     {{>header}}
+    <p>This is developed to forecast weather details of any given village/city/state</p>
   </div>
     {{>footer}}
     </body>
