--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,8 +9,8 @@
   <body>
 <div class="main-content">
     {{>header}}
-    
 
+    <p>Search any city to know weather report</p>
     <form>
       <input placeholder="Location">
       <button>Search</button>
