--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
   <body>
     <div class="main-content">
     {{>header}}
-    <img class="portrait" src="/img/img.jpeg"/>
+    <p>This project is entirely dedicated to DEVATHA</p>
+    <img class="portrait" src="/img/img.jpg"/>
 </div>
     {{>footer}}
     </body>
