=add high and low

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,8 +9,8 @@
   <body>
     <div class="main-content">
     {{>header}}
-    <p>This project is entirely dedicated to DEVATHA</p>
-    <img class="portrait" src="/img/img.jpg"/>
+    <p>This site was created by Anumolu Goutham.This uses mapbox and darksky to get weather details.</p>
+    <img class="portrait" src="/img/gou.jpg"/>
 </div>
     {{>footer}}
     </body>
