--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,6 +9,7 @@
     <div class="main-content">
     {{>header}}
     <p>This is developed to forecast weather details of any given village/city/state</p>
+    <p>Simply enter your place to fetch details</p>
   </div>
     {{>footer}}
     </body>
