--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 <div class="main-content">
     {{>header}}
 
-    <p>Search any city to know weather report</p>
+    <p>Use this site to get your weather details!</p>
     <form>
       <input placeholder="Location">
       <button>Search</button>
